Fix gallery select text color on ios safari

--- a/src/routes/gallery/styles.scss
+++ b/src/routes/gallery/styles.scss
@@ -39,6 +39,10 @@
                 flex-grow: 1;
             }
         }
+
+        select {
+            color: $black;
+        }
     }
 
     &-route__tile {
